<?xml version="1.0"?>
<package>
  <name>test_subscribers</name>
  <version>0.0.0</version>
  <description>The test_subscribers package</description>

  <maintainer email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</maintainer>

  <license>ASL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>gazebo</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
